# OpenCL

./: CMakeLists.txt  README.md  deviceQuery.cpp  deviceQuery_v1.cpp
SDKTest/: .cproject  .project  CMakeLists.txt  SDKTest.cpp  SDKTest.hpp  kernel.cl
SDKTest/Debug/: SDKTest.d  makefile  objects.mk  sources.mk  subdir.mk
